--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -11,10 +11,6 @@ courses: { compsci: {week: 1} }
 <style>
     .canvas-container {
         display: flex;
-        background-image: url('images/Backy_Roundy.jpg');
-        background-size: repeat; 
-        background-attachment: fixed;
-        background-repeat: repeat;
     }
     canvas {
         margin: 0;
@@ -24,10 +20,7 @@ courses: { compsci: {week: 1} }
 
 <body>
     <div class="canvas-container">
-        <canvas id="playerCanvas">
-                <img id="box" src="{{site.baseurl}}/images/box.png">
-                <img id="platform" src="{{site.baseurl}}/images/platform.png"> 
-        </canvas>
+        <canvas id="playerCanvas"></canvas>
     </div>
 </body>
 
@@ -61,7 +54,7 @@ courses: { compsci: {week: 1} }
                 this.frameY = 0;
                 this.frameX = 0;
                 this.maxFrame = 7;
-                this.speed = 10; 
+                this.speed = 5; 
                 this.gravity = 0.5; // Gravity value
                 this.onPlatform = false; // Flag to track if on platform
                 this.currentPlatform = null; // Reference to current platform
@@ -129,19 +122,20 @@ courses: { compsci: {week: 1} }
 
         class Platform {
             constructor() {
-                this.image = document.getElementById("platform");
+                this.image = new Image();
+                this.image.src = "{{site.baseurl}}/images/platform.png";
                 this.spriteWidth = PLATFORM_SPRITE_WIDTH;
                 this.spriteHeight = PLATFORM_SPRITE_HEIGHT;
-                this.width = this.spriteWidth;
-                this.height = this.spriteHeight;
-                this.x = 200;
-                this.y = 400;
+                this.width = this.spriteWidth * PLATFORM_SCALE_FACTOR;
+                this.height = this.spriteHeight * PLATFORM_SCALE_FACTOR;
+                this.x = 0;
+                this.y = 200; // Adjust the initial position as needed
                 this.scale = PLATFORM_SCALE_FACTOR;
                 this.minFrame = 0;
                 this.maxFrame = PLATFORM_FRAME_LIMIT;
                 this.frameX = 0;
                 this.frameY = 0;
-                this.prevY = this.y; // Store previous y position
+                this.prevY = this.y; // Add prevY property to track previous position
             }
 
             draw(context) {
@@ -153,23 +147,59 @@ courses: { compsci: {week: 1} }
                     this.spriteHeight,
                     this.x,
                     this.y,
-                    this.width * this.scale,
-                    this.height * this.scale
+                    this.width,
+                    this.height
                 );
             }
 
             update() {
-                this.prevY = this.y; // Update previous y position
                 if (this.frameX < this.maxFrame) {
                     this.frameX++;
                 } else {
                     this.frameX = 0;
                 }
+
+                const event = new CustomEvent('platformUpdated', {
+                    detail: {
+                        platformX: this.x,
+                        platformY: this.y
+                    }
+                });
+                document.dispatchEvent(event);
+
+                // Update prevY to track previous position
+                this.prevY = this.y;
             }
         }
 
-        const box = new Box();
         const platform = new Platform();
+
+        let animationHasRun = false;
+
+        document.addEventListener('keydown', function (event) {
+            switch (event.key) {
+                case ' ':
+                    if (!animationHasRun) {
+                        animationHasRun = true;
+                        animate();
+                    }
+            }
+        });
+
+        function animate() {
+            if (animationHasRun) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                platform.draw(ctx);
+                platform.update();
+            }
+            if (platform.frameX !== platform.maxFrame) {
+                setTimeout(function () {
+                    requestAnimationFrame(animate);
+                }, 100);
+            }
+        };
+
+        const box = new Box();
 
         const keyState = {
             ArrowLeft: false,
