--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -2,10 +2,10 @@
 toc: true
 comments: false
 layout: post
-title: test
+title: box test
 description: in progress
-type: background
-courses: { compsci: {week: 1} }
+type: platforms
+courses: { compsci: {week: 3} }
 ---
 
 <style>
