--- a/_posts/2023-10-27-Pinky.md
+++ b/_posts/2023-10-27-Pinky.md
@@ -4,7 +4,7 @@ comments: false
 layout: post
 title: pinky
 description: in progress
-type: background
+type: sprites
 courses: { compsci: {week: 1} }
 ---
 <!DOCTYPE html>
