--- a/_posts/2023-10-25-mainPage.md
+++ b/_posts/2023-10-25-mainPage.md
@@ -225,7 +225,7 @@ courses: { compsci: {week: 4} }
     } 
     function hard() {
         // Change the background image for "Easy" difficulty
-        backgroundImg.src = '{{site.baseurl}}/images/iceman-charecterCard.png';
+        backgroundImg.src = '{{site.baseurl}}/images/Icemancard.png';
 
         // Adjust canvas width and height
         const newCanvasWidth = 725; // set your desired width
