--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -25,6 +25,7 @@ courses: { compsci: {week: 3} }
 </body>
 
 <script>
+    let gravityEnabled = true;
     window.addEventListener('load', function () {
         const canvas = document.getElementById('playerCanvas');
         const ctx = canvas.getContext('2d');
@@ -42,22 +43,25 @@ courses: { compsci: {week: 3} }
 
         class Box {
             constructor() {
-                this.image = document.getElementById("box");
-                this.spriteWidth = BOX_SPRITE_WIDTH;
-                this.spriteHeight = BOX_SPRITE_HEIGHT;
-                this.width = this.spriteWidth;
-                this.height = this.spriteHeight;
-                this.x = 0;
-                this.y = 300;
-                this.scale = BOX_SCALE_FACTOR;
-                this.minFrame = 0;
-                this.frameY = 0;
-                this.frameX = 0;
-                this.maxFrame = 7;
-                this.speed = 5; 
-                this.gravity = 0.5; // Gravity value
-                this.onPlatform = false; // Flag to track if on platform
-                this.currentPlatform = null; // Reference to current platform
+                this.image = new Image();
+                this.image.src = "{{site.baseurl}}/images/box.png";
+                this.image.onload = () => {
+                    this.spriteWidth = BOX_SPRITE_WIDTH;
+                    this.spriteHeight = BOX_SPRITE_HEIGHT;
+                    this.width = this.spriteWidth;
+                    this.height = this.spriteHeight;
+                    this.x = 0;
+                    this.y = 300;
+                    this.scale = BOX_SCALE_FACTOR;
+                    this.minFrame = 0;
+                    this.frameY = 0;
+                    this.frameX = 0;
+                    this.maxFrame = 7;
+                    this.speed = 5; 
+                    this.gravity = 0; // Gravity value
+                    this.onPlatform = false; // Flag to track if on platform
+                    this.currentPlatform = null; // Reference to current platform
+                }
             }
             setFrameLimit(limit) {
                 this.maxFrame = limit;
@@ -100,11 +104,12 @@ courses: { compsci: {week: 3} }
                     this.currentPlatform = null; // Reset current platform if not colliding
                 }
             }
+
             checkCollision(platform) {
                 const isColliding = (
-                    this.x < platform.x + platform.width * platform.scale &&
+                    this.x < platform.x + platform.width &&
                     this.x + this.width * this.scale > platform.x &&
-                    this.y < platform.y + platform.height * platform.scale &&
+                    this.y < platform.y + platform.height &&
                     this.y + this.height * this.scale > platform.y
                 );
 
@@ -118,6 +123,7 @@ courses: { compsci: {week: 3} }
 
                 return isColliding;
             }
+
         }
 
         class Platform {
@@ -169,9 +175,16 @@ courses: { compsci: {week: 3} }
 
                 // Update prevY to track previous position
                 this.prevY = this.y;
+
+                if (gravityEnabled && !this.onPlatform) {
+                    // Apply gravity if enabled and not on platform
+                    this.y += this.gravity;
+                } else {
+                    // Anchor the box to the bottom when not on platform
+                    this.y = canvas.height - this.height * this.scale;
+                }
             }
         }
-
         const platform = new Platform();
 
         let animationHasRun = false;
