COLLISION HELL YEA

--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -24,8 +24,53 @@ courses: { compsci: {week: 3} }
     </div>
 </body>
 
+<style>
+    .canvas-container {
+        display: flex;
+        background-image: url('images/Backy_Roundy.jpg');
+        background-size: repeat; 
+        background-attachment: fixed;
+        background-repeat: repeat;
+    }
+    canvas {
+        margin: 0;
+        border: 1px solid white;
+    }
+</style>
+
+<body>
+    <div class="canvas-container">
+        <canvas id="playerCanvas">
+            <img id="box" src="{{site.baseurl}}/images/box.png">
+            <img id="platform" src="{{site.baseurl}}/images/platform.png"> 
+        </canvas>
+    </div>
+</body>
+
 <script>
-    let gravityEnabled = true;
+    function handleBoxPlatformCollision(box, platform) {
+        const boxRight = box.x + box.width * box.scale;
+        const boxBottom = box.y + box.height * box.scale;
+
+        const platformRight = platform.x + platform.width * platform.scale;
+        const platformBottom = platform.y + platform.height * platform.scale;
+
+        if (
+            boxRight >= platform.x &&
+            box.x <= platformRight &&
+            boxBottom >= platform.y &&
+            box.y <= platformBottom
+        ) {
+            // Collision detected, handle accordingly
+            box.onPlatform = true;
+            box.applyGravity = false;
+        } else {
+            // No collision, enable gravity
+            box.onPlatform = false;
+            box.applyGravity = true;
+        }
+    }
+
     window.addEventListener('load', function () {
         const canvas = document.getElementById('playerCanvas');
         const ctx = canvas.getContext('2d');
@@ -37,31 +82,28 @@ courses: { compsci: {week: 3} }
         const PLATFORM_SPRITE_WIDTH = 362.25; 
         const PLATFORM_SPRITE_HEIGHT = 377;
         const PLATFORM_SCALE_FACTOR = 0.25;  
-        const PLATFORM_FRAME_LIMIT = 3;  
+        const PLATFORM_FRAME_LIMIT = 4;  
         canvas.width = BOX_SPRITE_WIDTH * BOX_SCALE_FACTOR*6;
         canvas.height = BOX_SPRITE_HEIGHT * BOX_SCALE_FACTOR*3;
 
         class Box {
             constructor() {
-                this.image = new Image();
-                this.image.src = "{{site.baseurl}}/images/box.png";
-                this.image.onload = () => {
-                    this.spriteWidth = BOX_SPRITE_WIDTH;
-                    this.spriteHeight = BOX_SPRITE_HEIGHT;
-                    this.width = this.spriteWidth;
-                    this.height = this.spriteHeight;
-                    this.x = 0;
-                    this.y = 300;
-                    this.scale = BOX_SCALE_FACTOR;
-                    this.minFrame = 0;
-                    this.frameY = 0;
-                    this.frameX = 0;
-                    this.maxFrame = 7;
-                    this.speed = 5; 
-                    this.gravity = 0; // Gravity value
-                    this.onPlatform = false; // Flag to track if on platform
-                    this.currentPlatform = null; // Reference to current platform
-                }
+                this.image = document.getElementById("box");
+                this.spriteWidth = BOX_SPRITE_WIDTH;
+                this.spriteHeight = BOX_SPRITE_HEIGHT;
+                this.width = this.spriteWidth;
+                this.height = this.spriteHeight;
+                this.x = 0;
+                this.y = 300;
+                this.scale = BOX_SCALE_FACTOR;
+                this.minFrame = 0;
+                this.frameY = 0;
+                this.frameX = 0;
+                this.maxFrame = 7;
+                this.speed = 10; 
+                this.gravity = 5; 
+                this.onPlatform = false; 
+                this.applyGravity = true;
             }
             setFrameLimit(limit) {
                 this.maxFrame = limit;
@@ -69,9 +111,6 @@ courses: { compsci: {week: 3} }
             setPosition(x, y) {
                 this.x = x;
                 this.y = y;
-            }
-            setPlatform(platform) {
-                this.currentPlatform = platform;
             }
             draw(context) {
                 context.drawImage(
@@ -93,55 +132,53 @@ courses: { compsci: {week: 3} }
                     this.frameX = 0;
                 }
 
-                if (!this.onPlatform) {
-                    this.y += this.gravity; // Apply gravity
+                if (this.onPlatform || this.y >= canvas.height - this.height * this.scale) {
+                    this.applyGravity = false; // Disable gravity on platform or at bottom
+                } else {
+                    this.applyGravity = true; // Enable gravity when not on platfordm and not at bottom
                 }
 
-                if (this.currentPlatform) {
-                    // Adjust box position based on platform's movement
-                    const platformMovement = this.currentPlatform.y - this.currentPlatform.prevY;
-                    this.y += platformMovement;
-                    this.currentPlatform = null; // Reset current platform if not colliding
+                if (this.applyGravity) { 
+                    this.y += this.gravity; 
                 }
             }
-
             checkCollision(platform) {
                 const isColliding = (
-                    this.x < platform.x + platform.width &&
+                    this.x < platform.x + platform.width * platform.scale &&
                     this.x + this.width * this.scale > platform.x &&
-                    this.y < platform.y + platform.height &&
+                    this.y < platform.y + platform.height * platform.scale &&
                     this.y + this.height * this.scale > platform.y
                 );
 
+                this.onPlatform = isColliding; 
                 if (isColliding) {
-                    this.onPlatform = true; // Update onPlatform flag
-                    this.setPlatform(platform); // Set the current platform
+                    this.onPlatform = true;
+                    this.toggleGravity(); 
                 } else {
-                    this.onPlatform = false; // Update onPlatform flag
-                    this.setPlatform(null); // Reset current platform if not colliding
+                    this.onPlatform = false;
                 }
 
                 return isColliding;
             }
-
+            toggleGravity() {
+                this.applyGravity = !this.applyGravity;
+            }
         }
 
         class Platform {
             constructor() {
-                this.image = new Image();
-                this.image.src = "{{site.baseurl}}/images/platform.png";
+                this.image = document.getElementById("platform");
                 this.spriteWidth = PLATFORM_SPRITE_WIDTH;
                 this.spriteHeight = PLATFORM_SPRITE_HEIGHT;
-                this.width = this.spriteWidth * PLATFORM_SCALE_FACTOR;
-                this.height = this.spriteHeight * PLATFORM_SCALE_FACTOR;
-                this.x = 0;
-                this.y = 200; // Adjust the initial position as needed
+                this.width = this.spriteWidth;
+                this.height = this.spriteHeight;
+                this.x = 200;
+                this.y = 400;
                 this.scale = PLATFORM_SCALE_FACTOR;
                 this.minFrame = 0;
                 this.maxFrame = PLATFORM_FRAME_LIMIT;
                 this.frameX = 0;
                 this.frameY = 0;
-                this.prevY = this.y; // Add prevY property to track previous position
             }
 
             draw(context) {
@@ -153,8 +190,8 @@ courses: { compsci: {week: 3} }
                     this.spriteHeight,
                     this.x,
                     this.y,
-                    this.width,
-                    this.height
+                    this.width * this.scale,
+                    this.height * this.scale
                 );
             }
 
@@ -164,55 +201,11 @@ courses: { compsci: {week: 3} }
                 } else {
                     this.frameX = 0;
                 }
-
-                const event = new CustomEvent('platformUpdated', {
-                    detail: {
-                        platformX: this.x,
-                        platformY: this.y
-                    }
-                });
-                document.dispatchEvent(event);
-
-                // Update prevY to track previous position
-                this.prevY = this.y;
-
-                if (gravityEnabled && !this.onPlatform) {
-                    // Apply gravity if enabled and not on platform
-                    this.y += this.gravity;
-                } else {
-                    // Anchor the box to the bottom when not on platform
-                    this.y = canvas.height - this.height * this.scale;
-                }
             }
         }
-        const platform = new Platform();
-
-        let animationHasRun = false;
-
-        document.addEventListener('keydown', function (event) {
-            switch (event.key) {
-                case ' ':
-                    if (!animationHasRun) {
-                        animationHasRun = true;
-                        animate();
-                    }
-            }
-        });
-
-        function animate() {
-            if (animationHasRun) {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                platform.draw(ctx);
-                platform.update();
-            }
-            if (platform.frameX !== platform.maxFrame) {
-                setTimeout(function () {
-                    requestAnimationFrame(animate);
-                }, 100);
-            }
-        };
 
         const box = new Box();
+        const platform = new Platform();
 
         const keyState = {
             ArrowLeft: false,
@@ -267,30 +260,57 @@ courses: { compsci: {week: 3} }
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
             if (deltaTime >= FRAME_INTERVAL) {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.clearRect(box.x, box.y, box.width * box.scale, box.height * box.scale);
+
                 if (box.checkCollision(platform)) {
                     box.y = platform.y - box.height * box.scale;
                     platform.y = box.y + box.height * box.scale;
-                    box.onPlatform = true; // Make sure onPlatform is true when on platform
-                    box.setPlatform(platform); // Set the current platform
                 } else {
-                    if (box.currentPlatform) {
-                        // Adjust box position based on platform's movement
-                        const platformMovement = platform.y - platform.prevY;
-                        box.y += platformMovement;
-                        box.currentPlatform = null; // Reset current platform if not colliding
-                    }
-                    box.onPlatform = false; // Reset onPlatform flag when not on platform
+                    box.onPlatform = false; 
                 }
+
                 box.draw(ctx);
                 box.update();
-                platform.draw(ctx);
-                platform.update();
                 updateAnimations();
                 lastTimestamp = timestamp;
             }
+
             requestAnimationFrame(animate);
         }
+
         animate();
+        let animationHasRun = false;
+        let platformAnimationFinished = false;
+
+        function animatePlatform() {
+            if (!platformAnimationFinished) {
+                ctx.clearRect(platform.x, platform.y, platform.width, platform.height);
+                platform.draw(ctx);
+                platform.update();
+
+                if (platform.frameX === platform.maxFrame) {
+                    platformAnimationFinished = true;
+                }
+
+                if (!platformAnimationFinished) {
+                    setTimeout(function () {
+                        requestAnimationFrame(animatePlatform);
+                    }, 100); 
+                }
+            }
+        }
+
+        document.addEventListener('keydown', function (event) {
+            switch (event.key) {
+                case ' ':
+                    if (!animationHasRun) {
+                        animationHasRun = true;
+                        platformAnimationFinished = false;
+                        animatePlatform();
+                    }
+            }
+        });
+
+        platform.draw(ctx);
     });
 </script>
