Background on test boxy

--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -27,7 +27,7 @@ courses: { compsci: {week: 3} }
 <style>
     .canvas-container {
         display: flex;
-        background-image: url('images/Backy_Roundy.jpg');
+        background-image: url('images/BacBackground With Road 6.1.jpg');
         background-size: repeat; 
         background-attachment: fixed;
         background-repeat: repeat;
