--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -11,32 +11,73 @@ courses: { compsci: {week: 3} }
 <style>
     .canvas-container {
         display: flex;
+        position: fixed;
     }
     canvas {
         margin: 0;
         border: 1px solid white;
     }
 </style>
+     
+<!-- Prepare background DOM canvas -->
+<canvas id="BackyRoundyCanvas"></canvas>
 
-<body>
-    <div class="canvas-container">
-        <canvas id="playerCanvas"></canvas>
-    </div>
-</body>
+<script>
+    const canvas = document.getElementById("BackyRoundyCanvas");
+    const ctx = canvas.getContext('2d');
 
-<style>
-    .canvas-container {
-        display: flex;
-        background-image: url('images/Backy_Roundy.jpg');
-        background-size: repeat; 
-        background-attachment: fixed;
-        background-repeat: repeat;
+    const backgroundImg = new Image();
+    backgroundImg.src = '{{site.baseurl}}/images/Backy_Roundy.jpg';
+
+    backgroundImg.onload = function () {
+        const WIDTH = 1280; // Constant width
+        const HEIGHT = 1000; // Constant height
+        const ASPECT_RATIO = WIDTH / HEIGHT;
+
+        const canvasWidth = window.innerWidth;
+        const canvasHeight = canvasWidth / ASPECT_RATIO;
+
+        canvas.width = canvasWidth;
+        canvas.height = canvasHeight;
+        canvas.style.width = `${canvasWidth}px`;
+        canvas.style.height = `${canvasHeight}px`;
+
+        var gameSpeed = 2;
+
+        class Layer {
+            constructor(image, speedRatio, initialY) {
+                this.x = 0;
+                this.y = initialY; // Set a new initial value for y
+                this.width = WIDTH;
+                this.height = HEIGHT;
+                this.image = image;
+                this.speedRatio = speedRatio;
+                this.speed = gameSpeed * this.speedRatio;
+                this.frame = 0;
+            }
+            update() {
+                this.x = (this.x - this.speed) % this.width;
+            }
+            draw() {
+                ctx.drawImage(this.image, this.x, this.y);
+                ctx.drawImage(this.image, this.x + this.width, this.y);
+            }
+        }
+
+        var backgroundObj = new Layer(backgroundImg, 0.5, 0); // Set initial Y position to 200
+
+        function background() {
+            backgroundObj.update();
+            backgroundObj.draw();
+            requestAnimationFrame(background);
+        }
+        background();
+    };
+
+    function easy() {
+        console.log("It works")
     }
-    canvas {
-        margin: 0;
-        border: 1px solid white;
-    }
-</style>
+</script>
 
 <body>
     <div class="canvas-container">
@@ -135,7 +176,7 @@ courses: { compsci: {week: 3} }
                 if (this.onPlatform || this.y >= canvas.height - this.height * this.scale) {
                     this.applyGravity = false; // Disable gravity on platform or at bottom
                 } else {
-                    this.applyGravity = true; // Enable gravity when not on platfordm and not at bottom
+                    this.applyGravity = true; // Enable gravity when not on platform and not at bottom
                 }
 
                 if (this.applyGravity) { 
