small change for test boxy

--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -25,9 +25,9 @@ courses: { compsci: {week: 3} }
 </body>
 
 <style>
-    .canvas-container {
+     .canvas-container {
         display: flex;
-        background-image: url('images/BacBackground With Road 6.1.jpg');
+        background-image: url('{{site.baseurl}}images/Background With Road 6.1.jpg');
         background-size: repeat; 
         background-attachment: fixed;
         background-repeat: repeat;
@@ -83,8 +83,8 @@ courses: { compsci: {week: 3} }
         const PLATFORM_SPRITE_HEIGHT = 377;
         const PLATFORM_SCALE_FACTOR = 0.25;  
         const PLATFORM_FRAME_LIMIT = 4;  
-        canvas.width = BOX_SPRITE_WIDTH * BOX_SCALE_FACTOR*6;
-        canvas.height = BOX_SPRITE_HEIGHT * BOX_SCALE_FACTOR*3;
+        canvas.width = 1911;//BOX_SPRITE_WIDTH * BOX_SCALE_FACTOR*6;
+        canvas.height = 535; //BOX_SPRITE_HEIGHT * BOX_SCALE_FACTOR*3;
 
         class Box {
             constructor() {
