--- a/_posts/2023-10-25-newGame.md
+++ b/_posts/2023-10-25-newGame.md
@@ -17,7 +17,7 @@ courses: { compsci: {week: 4} }
 <script>
     let canvas = document.getElementById('canvas');
     let c = canvas.getContext('2d');
-    canvas.width = 650;
+    canvas.width = 1500;
     canvas.height = 400;
     let gravity = 1.5;
     class Player {
@@ -30,11 +30,11 @@ courses: { compsci: {week: 4} }
                 x: 0,
                 y: 0
             };
-            this.width = 30;
+            this.width = 50;
             this.height = 30;
         }
         draw() {
-            c.fillStyle = 'red';
+            c.fillStyle = 'brown';
             c.fillRect(this.position.x, this.position.y, this.width, this.height);
         }
         update() {
@@ -54,7 +54,7 @@ courses: { compsci: {week: 4} }
                 y: 300
             }
             this.image = image;
-            this.width = 650;
+            this.width = 1500;
             this.height = 100;
         }
         draw() {
@@ -64,7 +64,7 @@ courses: { compsci: {week: 4} }
     class Tube {
         constructor(image) {
             this.position = {
-                x: 500,
+                x: 900,
                 y: 180
             }
             this.image = image;
