--- a/_posts/2023-10-25-newGame.md
+++ b/_posts/2023-10-25-newGame.md
@@ -64,7 +64,7 @@ courses: { compsci: {week: 4} }
     class Tube {
         constructor(image) {
             this.position = {
-                x: 900,
+                x: 1390,
                 y: 180
             }
             this.image = image;
@@ -118,7 +118,7 @@ courses: { compsci: {week: 4} }
     let imageTube = new Image()
     let imageBlock = new Image()
     image.src = 'https://samayass.github.io/samayaCSA/images/platform.png'
-    imageTube.src = 'https://samayass.github.io/samayaCSA/images/tube.png'
+    imageTube.src = '{{site.baseurl}}/images/house.png'
     imageBlock.src = 'https://samayass.github.io/samayaCSA/images/box.png';
     //--
     // NEW CODE - ADD GOOMBA IMAGE
