--- a/_posts/2023-10-25-newGame.md
+++ b/_posts/2023-10-25-newGame.md
@@ -117,7 +117,7 @@ courses: { compsci: {week: 4} }
     let image = new Image()
     let imageTube = new Image()
     let imageBlock = new Image()
-    image.src = 'https://samayass.github.io/samayaCSA/images/platform.png'
+    image.src = '{{site.baseurl}}/images/Road.png'
     imageTube.src = '{{site.baseurl}}/images/house.png'
     imageBlock.src = 'https://samayass.github.io/samayaCSA/images/box.png';
     //--
