--- a/_posts/2023-11-2-NORA.GAME.md
+++ b/_posts/2023-11-2-NORA.GAME.md
@@ -17,7 +17,7 @@ courses: { compsci: {week: 4} }
 <script>
     let canvas = document.getElementById('canvas');
     let c = canvas.getContext('2d');
-    canvas.width = 1500;
+    canvas.width = 1500;ma
     canvas.height = 380;
     let gravity = 1.5;
     class Player {
