--- a/_posts/2023-10-25-newGame.md
+++ b/_posts/2023-10-25-newGame.md
@@ -2,7 +2,7 @@
 toc: true
 comments: false
 layout: post
-title: New Game
+title: New Game1
 description: in progress
 type: background
 courses: { compsci: {week: 4} }
@@ -18,7 +18,7 @@ courses: { compsci: {week: 4} }
     let canvas = document.getElementById('canvas');
     let c = canvas.getContext('2d');
     canvas.width = 1500;
-    canvas.height = 400;
+    canvas.height = 380;
     let gravity = 1.5;
     class Player {
         constructor() {
@@ -117,13 +117,9 @@ courses: { compsci: {week: 4} }
     let image = new Image()
     let imageTube = new Image()
     let imageBlock = new Image()
-<<<<<<< HEAD
-    image.src = '{{site.baseurl}}images/Road.png'
-=======
-    image.src = 'https://samayass.github.io/samayaCSA/images/platform.png'
->>>>>>> aaf4134b666c8c071436bf0bfb5fa95595dbc340
+    image.src = '{{site.baseurl}}/images/Road.png'
     imageTube.src = '{{site.baseurl}}/images/house.png'
-    imageBlock.src = 'https://samayass.github.io/samayaCSA/images/box.png';
+    imageBlock.src = '{{site.baseurl}}/images/balcony.png';
     //--
     // NEW CODE - ADD GOOMBA IMAGE
     //--
