iceman replace goomba

--- a/_posts/2023-10-25-newGame.md
+++ b/_posts/2023-10-25-newGame.md
@@ -92,12 +92,16 @@ courses: { compsci: {week: 4} }
     //--
     // NEW CODE - CREATE GOOMBA CLASS
     //--
+</body>
     class Goomba {
         constructor(image) {
             this.position = {
                 x: 250,
                 y: 245
             };
+            this.image = new Image(); // Create a new Image element
+            this.image.src = '{{site.baseurl}}/images/iceman-flipped.png'; // Set the source attribute
+            this.image.id = 'IceMan'; // Set the id attribute
             this.image = image;
             this.width = 55;
             this.height = 55;
@@ -117,11 +121,7 @@ courses: { compsci: {week: 4} }
     let image = new Image()
     let imageTube = new Image()
     let imageBlock = new Image()
-<<<<<<< HEAD
     image.src = '{{site.baseurl}}/images/Road.png'
-=======
-    image.src = 'https://samayass.github.io/samayaCSA/images/platform.png'
->>>>>>> 10cf0d3a13502838e149094aeebfc690acd88dbf
     imageTube.src = '{{site.baseurl}}/images/house.png'
     imageBlock.src = '{{site.baseurl}}/images/balcony.png';
     //--
