image change to goomba

--- a/_posts/2023-10-25-newGame.md
+++ b/_posts/2023-10-25-newGame.md
@@ -99,9 +99,6 @@ courses: { compsci: {week: 4} }
                 x: 250,
                 y: 245
             };
-            this.image = new Image(); // Create a new Image element
-            this.image.src = '{{site.baseurl}}/images/iceman-flipped.png'; // Set the source attribute
-            this.image.id = 'IceMan'; // Set the id attribute
             this.image = image;
             this.width = 55;
             this.height = 55;
@@ -128,7 +125,7 @@ courses: { compsci: {week: 4} }
     // NEW CODE - ADD GOOMBA IMAGE
     //--
     let imageGoomba = new Image()
-    imageGoomba.src = 'https://samayass.github.io/samayaCSA/images/goomba.png';
+    imageGoomba.src = 'https://ryann96.github.io/BoxGame/images/goomba.png';
     let platform = new Platform(image)
     let tube = new Tube(imageTube)
     let blockObject = new BlockObject(imageBlock)
