--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -2,7 +2,7 @@
 toc: true
 comments: false
 layout: post
-title: New Game1
+title: New Game2
 description: in progress
 type: background
 courses: { compsci: {week: 4} }
@@ -124,7 +124,7 @@ courses: { compsci: {week: 4} }
     // NEW CODE - ADD GOOMBA IMAGE
     //--
     let imageGoomba = new Image()
-    imageGoomba.src = 'https://samayass.github.io/samayaCSA/images/goomba.png';
+    imageGoomba.src = 'https://ryann96.github.io/Ryann96/images/Uno-Stalker.png';
     let platform = new Platform(image)
     let tube = new Tube(imageTube)
     let blockObject = new BlockObject(imageBlock)
@@ -293,4 +293,4 @@ courses: { compsci: {week: 4} }
                 break;
         }
     })
-</script>
+</script> 
