--- a/_posts/2023-11-05-TeST.md
+++ b/_posts/2023-11-05-TeST.md
@@ -1,32 +1,117 @@
 ---
-layout: default
-title: Delveries
+toc: true
+comments: false
+layout: post
+title: teSt
+description: in progress
+type: background
+courses: { compsci: {week: 2} }
 ---
 
 <style>
     .canvas-container {
         display: flex;
-        background-image: url('images/Backy_Roundy.jpg');
-        background-size: repeat; 
-        background-attachment: fixed;
-        background-repeat: repeat;
+        position: fixed;
     }
     canvas {
         margin: 0;
         border: 1px solid white;
     }
 </style>
+     
+<!-- Prepare background DOM canvas -->
+<canvas id="BackyRoundyCanvas"></canvas>
+
+<script>
+    const canvas = document.getElementById("BackyRoundyCanvas");
+    const ctx = canvas.getContext('2d');
+
+    const backgroundImg = new Image();
+    backgroundImg.src = '{{site.baseurl}}/images/Backy_Roundy.jpg';
+
+    backgroundImg.onload = function () {
+        const WIDTH = 1280; // Constant width
+        const HEIGHT = 1000; // Constant height
+        const ASPECT_RATIO = WIDTH / HEIGHT;
+
+        const canvasWidth = window.innerWidth;
+        const canvasHeight = canvasWidth / ASPECT_RATIO;
+
+        canvas.width = canvasWidth;
+        canvas.height = canvasHeight;
+        canvas.style.width = `${canvasWidth}px`;
+        canvas.style.height = `${canvasHeight}px`;
+
+        var gameSpeed = 2;
+
+        class Layer {
+            constructor(image, speedRatio, initialY) {
+                this.x = 0;
+                this.y = initialY; // Set a new initial value for y
+                this.width = WIDTH;
+                this.height = HEIGHT;
+                this.image = image;
+                this.speedRatio = speedRatio;
+                this.speed = gameSpeed * this.speedRatio;
+                this.frame = 0;
+            }
+            update() {
+                this.x = (this.x - this.speed) % this.width;
+            }
+            draw() {
+                ctx.drawImage(this.image, this.x, this.y);
+                ctx.drawImage(this.image, this.x + this.width, this.y);
+            }
+        }
+
+        var backgroundObj = new Layer(backgroundImg, 0.5, 0); // Set initial Y position to 200
+
+        function background() {
+            backgroundObj.update();
+            backgroundObj.draw();
+            requestAnimationFrame(background);
+        }
+        background();
+    };
+
+    function easy() {
+        console.log("It works")
+    }
+</script>
 
 <body>
     <div class="canvas-container">
         <canvas id="playerCanvas">
-                <img id="box" src="{{site.baseurl}}/images/box.png">
-                <img id="platform" src="{{site.baseurl}}/images/platform.png"> 
+            <img id="box" src="{{site.baseurl}}/images/box.png">
+            <img id="platform" src="{{site.baseurl}}/images/platform.png"> 
         </canvas>
     </div>
 </body>
 
 <script>
+    function handleBoxPlatformCollision(box, platform) {
+        const boxRight = box.x + box.width * box.scale;
+        const boxBottom = box.y + box.height * box.scale;
+
+        const platformRight = platform.x + platform.width * platform.scale;
+        const platformBottom = platform.y + platform.height * platform.scale;
+
+        if (
+            boxRight >= platform.x &&
+            box.x <= platformRight &&
+            boxBottom >= platform.y &&
+            box.y <= platformBottom
+        ) {
+            // Collision detected, handle accordingly
+            box.onPlatform = true;
+            box.applyGravity = false;
+        } else {
+            // No collision, enable gravity
+            box.onPlatform = false;
+            box.applyGravity = true;
+        }
+    }
+
     window.addEventListener('load', function () {
         const canvas = document.getElementById('playerCanvas');
         const ctx = canvas.getContext('2d');
@@ -38,7 +123,7 @@ title: Delveries
         const PLATFORM_SPRITE_WIDTH = 362.25; 
         const PLATFORM_SPRITE_HEIGHT = 377;
         const PLATFORM_SCALE_FACTOR = 0.25;  
-        const PLATFORM_FRAME_LIMIT = 3;  
+        const PLATFORM_FRAME_LIMIT = 4;  
         canvas.width = BOX_SPRITE_WIDTH * BOX_SCALE_FACTOR*6;
         canvas.height = BOX_SPRITE_HEIGHT * BOX_SCALE_FACTOR*3;
 
@@ -57,8 +142,9 @@ title: Delveries
                 this.frameX = 0;
                 this.maxFrame = 7;
                 this.speed = 10; 
-                this.gravity = 0.5; // Gravity value
-                this.onPlatform = false; // Flag to track if on platform
+                this.gravity = 5; 
+                this.onPlatform = false; 
+                this.applyGravity = true;
             }
             setFrameLimit(limit) {
                 this.maxFrame = limit;
@@ -87,8 +173,14 @@ title: Delveries
                     this.frameX = 0;
                 }
 
-                if (!this.onPlatform) {
-                    this.y += this.gravity; // Apply gravity
+                if (this.onPlatform || this.y >= canvas.height - this.height * this.scale) {
+                    this.applyGravity = false; // Disable gravity on platform or at bottom
+                } else {
+                    this.applyGravity = true; // Enable gravity when not on platform and not at bottom
+                }
+
+                if (this.applyGravity) { 
+                    this.y += this.gravity; 
                 }
             }
             checkCollision(platform) {
@@ -99,11 +191,21 @@ title: Delveries
                     this.y + this.height * this.scale > platform.y
                 );
 
-                this.onPlatform = isColliding; // Update onPlatform flag
+                this.onPlatform = isColliding; 
+                if (isColliding) {
+                    this.onPlatform = true;
+                    this.toggleGravity(); 
+                } else {
+                    this.onPlatform = false;
+                }
 
                 return isColliding;
             }
+            toggleGravity() {
+                this.applyGravity = !this.applyGravity;
+            }
         }
+
         class Platform {
             constructor() {
                 this.image = document.getElementById("platform");
@@ -199,23 +301,57 @@ title: Delveries
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
             if (deltaTime >= FRAME_INTERVAL) {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.clearRect(box.x, box.y, box.width * box.scale, box.height * box.scale);
+
                 if (box.checkCollision(platform)) {
                     box.y = platform.y - box.height * box.scale;
                     platform.y = box.y + box.height * box.scale;
                 } else {
-                    box.onPlatform = false; // Reset onPlatform flag when not on platform
+                    box.onPlatform = false; 
                 }
+
                 box.draw(ctx);
                 box.update();
-                platform.draw(ctx);
-                platform.update();
                 updateAnimations();
                 lastTimestamp = timestamp;
             }
+
             requestAnimationFrame(animate);
         }
 
         animate();
+        let animationHasRun = false;
+        let platformAnimationFinished = false;
+
+        function animatePlatform() {
+            if (!platformAnimationFinished) {
+                ctx.clearRect(platform.x, platform.y, platform.width, platform.height);
+                platform.draw(ctx);
+                platform.update();
+
+                if (platform.frameX === platform.maxFrame) {
+                    platformAnimationFinished = true;
+                }
+
+                if (!platformAnimationFinished) {
+                    setTimeout(function () {
+                        requestAnimationFrame(animatePlatform);
+                    }, 100); 
+                }
+            }
+        }
+
+        document.addEventListener('keydown', function (event) {
+            switch (event.key) {
+                case ' ':
+                    if (!animationHasRun) {
+                        animationHasRun = true;
+                        platformAnimationFinished = false;
+                        animatePlatform();
+                    }
+            }
+        });
+
+        platform.draw(ctx);
     });
 </script>
